# cuda_test

./: CMakeLists.txt  Jenkinsfile  README.md
cmake/fetch/: Catch2.cmake
doc/: op-introduction.md
dockerfile/: dockerfile.cibase
include/: CMakeLists.txt
include/cudaop/: cudaop.h  types.h
include/cudaop/common/: utils.h
include/cudaop/generic/: atomic.h  float3operators.h  halfoperators.h  swap.h
include/cudaop/image/: arclength.h  imgaddweighted.h  imgalphablend.h  imgchannelmerge.h  imgchannelsplit.h  imgconvert.h  imgcopy.h  imgcopymakeborder.h  imgflip.h  imgguassianfilter.h  imghorizonscan.h  imgmeanfilter.h  imgmedianfilter.h  imgpyrdown.h  imgresize.h  imgscharr.h  imgslice.h  imgsobel.h  imgsqrt.h  imgstitching.h  minarearect.h
include/cudaop/image/generic/: border.h  interpolate.h  loaddata.h  sort.h  storedata.h  yuvformula.h
include/cudaop/tensor/: clamp.h  concat.h  datatypeconvert.h  depth_to_space.h  einsum.h  meannormalization.h  reduce.h  threshold.h  transpose.h
include/cudaop/type_traits/: data_type_traits.h  img_type_traits.h
scripts/: download.sh
tests/: CMakeLists.txt
tests/common/: macro.h  utils.h
tests/image/: test_arc_length.cu  test_image_addweighted.cu  test_image_alphablend.cu  test_image_channel_merge.cu  test_image_channel_split.cu  test_image_convert.cu  test_image_copy.cu  test_image_copymakeborder.cu  test_image_flip.cu  test_image_gaussianfilter.cu  test_image_meanfilter.cu  test_image_medianfilter.cu  test_image_minarearect.cu  test_image_pyrdown.cu  test_image_resize.cu  test_image_scharr.cu  test_image_slice.cu  test_image_sobel.cu  test_image_sqrt.cu  test_image_stitching.cu
tests/tensor/: test_clamp.cu  test_concat.cu  test_datatypeconvert.cu  test_depth_to_space.cu  test_einsum.cu  test_meannormalization.cu  test_reduce.cu  test_threshold.cu  test_transpose.cu
